# longboy

./: .gitignore  .rustfmt.toml  generate-certs.ps1
crates/longboy/: Cargo.toml
crates/longboy-cli/: Cargo.toml
crates/longboy-cli/src/: main.rs
crates/longboy-client-cli/: Cargo.toml
crates/longboy-client-cli/src/: main.rs
crates/longboy-schema/: Cargo.toml
crates/longboy-schema/src/: lib.rs
crates/longboy-server-cli/: Cargo.toml
crates/longboy-server-cli/src/: README.md  broker.rs  main.rs
crates/longboy/src/: client.rs  lib.rs  server.rs
crates/longboy/src/client/: client_session.rs  client_to_server_sender.rs  server_to_client_receiver.rs
crates/longboy/src/proto/: cipher.rs  receiver.rs
crates/longboy/src/server/: client_to_server_receiver.rs  server_to_client_sender.rs
crates/longboy/tests/: client_server.rs  sender_receiver.rs
docker/: .docker-compose.yml  client.dockerfile  server.dockerfile
