[package]
name = "longboy-server-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
config = "0.15.19"
enum-map = "2.7.3"
flume = "0.12.0"
longboy = { version = "1.0.0", path = "../longboy" }
longboy_schema = { version = "1.0.0", path = "../longboy-schema" }
quinn = "0.11.9"
rustls = { version = "0.23.35", features = ["aws-lc-rs"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.48.0"
tokio-util = "0.7.17"
