[package]
name = "longboy"
description = "longboy networking protocol"
version = "1.0.0"
license = "BSD-3-Clause"
repository = "https://github.com/JKurzer/longboy"
edition = "2024"
autotests = false

[[test]]
name = "tests"
path = "tests/lib.rs"

[dependencies]
anyhow = "1.0.86"
cipher = "=0.5.0-pre.6"
derive_builder = { version = "0.20.0", features = ["clippy"] }
enum-map = "2.7.3"
flume = "0.11.0"
fnv = "1.0.7"
quinn = "0.11.2"
rc5 = { git = "https://github.com/RustCrypto/block-ciphers.git", rev = "36b34efddc5da2340c4e08e09f590f2200c715ba" }
thunderdome = "0.6.1"
tokio = { version = "1.48", features = ["full"] }
tokio-util = "0.7.11"
tracing = "0.1.44"

[dev-dependencies]
parking_lot = "0.12.3"
rcgen = "0.13.1"

[features]
